web/css/main.css
@import url(color.css);
@import url(reset.css);

.main-container {
    position: relative;
    width: 100%;
    box-sizing: border-box;
    overflow: hidden;
    transition: all 0.5s;
}

.main-section {
    position: relative;
    width: 100vw;
    height: 100vh;
    box-sizing: border-box;
    padding-top: 10vh;
    overflow: hidden;
}

.main-section.members {
    width: 200vw;
    background-color: var(--gray-white);
    color: var(--dark-blue);
}

.main-section-title {
    position: absolute;
    top: 15vh;
    left: 10vw;
    font-size: xxx-large;
    font-family: Handon3gyeopsal600g, sans-serif;
}

.member-container {
    display: block;
    width: 100%;
}

.member-list {
    float: left;
    width: 100vw;
    box-sizing: border-box;
    padding: 15vh 15vw;
    display: grid;
    grid-template-rows: repeat(2, 2fr);
    grid-template-columns: repeat(4, 1fr);
    grid-row-gap: 2vw;
}

.member-list-item {
    width: 10vw;
    padding: 0.5vw;
    margin: 0 auto;
    text-align: center;
    background-color: var(--white);
    border-radius: 5px;
    box-shadow: 5px 5px 5px rgba(var(--blue-black-rgb), 0.3);
    cursor: pointer;
}

.member-list-item-user {
    width: 10vw;
    border-radius: 5px;
}

.member-list-item-nickname {
    display: block;
    font-size: x-large;
    margin: 10px;
    transition: all 0.3s;
}

.member-list-item:hover .member-list-item-nickname {
    font-weight: bold;
    color: var(--blue-sky);
}

.reviewing {
    background-color: var(--light-dark-sky);
}

.reviewing-list-item:nth-child(1) {
    background: linear-gradient(270deg, rgba(var(--light-pink-rgb), 0.5), rgba(var(--white-rgb), 1), rgba(var(--white-rgb), 1), rgba(var(--white-rgb), 1));
    background-position: 1% 50%;
    background-size: 250% 300%;
}

.reviewing-list-item:nth-child(2) {
    background: linear-gradient(270deg, rgba(var(--soft-cyan-rgb), 0.5), rgba(var(--white-rgb), 1), rgba(var(--white-rgb), 1), rgba(var(--white-rgb), 1));
    background-position: 1% 50%;
    background-size: 250% 300%;
}

.reviewing-list-item:nth-child(3) {
    background: linear-gradient(270deg, rgba(var(--very-light-blue-rgb), 0.5), rgba(var(--white-rgb), 1), rgba(var(--white-rgb), 1), rgba(var(--white-rgb), 1));
    background-position: 1% 50%;
    background-size: 250% 300%;
}

.reviewing-list-item:nth-child(4) {
    background: linear-gradient(270deg, rgba(var(--very-light-orange-rgb), 0.8), rgba(var(--white-rgb), 1), rgba(var(--white-rgb), 1), rgba(var(--white-rgb), 1));
    background-position: 1% 50%;
    background-size: 250% 300%;
}

.reviewing-list-item:nth-child(5) {
    background: linear-gradient(270deg, rgba(var(--dark-moderate-orenge-rgb), 0.8), rgba(var(--white-rgb), 1), rgba(var(--white-rgb), 1), rgba(var(--white-rgb), 1));
    background-position: 1% 50%;
    background-size: 250% 300%;
}

.main-section-list {
    width: 100vw;
    box-sizing: border-box;
    padding: 15vh 20vw 0;
}

.main-section-list-item:before {
    content: '';
    display: block;
    position: absolute;
    width: 7px;
    height: 5vh;
    border-radius: 5px 0 2px 2px;
    background-color: var(--light-pink);
}

.main-section-list-item:nth-child(2):before {
    background-color: var(--soft-cyan);
}

.main-section-list-item:nth-child(3):before {
    background-color: var(--very-light-blue);
}

.main-section-list-item:nth-child(4):before {
    background-color: var(--very-light-orange);
}

.main-section-list-item:nth-child(5):before {
    background-color: var(--dark-moderate-orenge);
}


.main-section-list-item {
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    margin-bottom: 2vh;
    border-radius: 5px;
    box-sizing: border-box;
    box-shadow: 5px 5px 5px rgba(var(--blue-black-rgb), 0.3);
    transition: all 0.3s ease-in-out;
}

.main-section-list-item-title {
    grid-column: 1 / 3;
    margin: 10px 20px 10px;
}

.main-section-list-item-post {
    font-size: larger;
    margin: 0 0 5px 20px;
}

.main-section-list-item-date {
    font-size: medium;
    text-align: right;
    margin: 0 20px 5px 0;

}

.main-section-list-item-footer {
    grid-column: 1/3;
    font-size: larger;
    text-align: right;
    margin-right: 20px;
}

.main-section-list-item-footer-comment {
    transform: translateY(-50%);
    font-size: medium;
}

.main-section-list-item-footer-comment-count {
    height: 100%;
    display: inline-block;
    vertical-align: middle;
}

.main-section-list-item-footer-image {
    width: 30px;
    height: 30px;
    border-radius: 50%;
    margin-left: 1vw;
}

.main-section-list-more {
    position: relative;
    width: 100%;
    text-align: center;
    cursor: pointer;
    font-size: larger;
}

.recent-activity {
    background-color: var(--white);
    margin-bottom: 10vh;
    padding-top: 10vh;
}

.recent-activity-container {
    position: relative;
    width: 50%;
    left: 50%;
    transform: translateX(-50%);
    box-shadow: 1px 1px 10px 0 var(--deep-dark-sky);
    padding: 2vw;
    border-radius: 5px;
}

.recent-activity-title {
    color: var(--dark-blue);
}

.recent-activity-item {
    display: grid;
    grid-template-columns: 1fr 5fr;
    align-items: center;
    margin-top: 3vh;
    height: 10vh;
    cursor: pointer;
}

.recent-activity-item:hover,
.recent-activity-item:active {
    color: var(--gray);
}

.recent-activity-icon {
    grid-column: 1;
    text-align: center;
    color: white;
    border-radius: 50%;
    font-size: 3vh;
    height: 8vh;
    width: 8vh;
    line-height: 8vh;
    vertical-align: middle;
    justify-self: center;
}

.recent-activity-icon > i {
    line-height: 8vh;
}

.recent-activity-contents {
    grid-column: 2;
    font-size: larger;
    display: grid;
    align-items: start;
    width: 80%;
    height: 100%;
}

.recent-activity-text {
    grid-row: 1;
    align-self: center;
}

.recent-activity-footer {
    grid-row: 2;
    align-self: center;
    height: 100%;
    border-bottom: solid 1px var(--gray-white);
}

.recent-activity-date {
    display: inline-block;
}

.recent-activity-user {
    display: inline-block;
    width: 30px;
    height: 30px;
    position: relative;
    margin-left: 1vw;
    top: 50%;
    transform: translateY(-50%);
    border-radius: 50%;
    box-shadow: 1px 1px 5px 1px var(--deep-dark-sky);
}

.newface {
    background-color: var(--sky);
}

.open-issue {
    background-color: var(--warning);
}

.close-issue {
    background-color: var(--leaf);
}

.comment {
    background-color: var(--dark-blue);
}

.open-review {
    background-color: var(--very-light-blue);
}

.open-post {
    background-color: var(--very-light-orange);
}

.main-section-list-item:hover {
    background-position: 99% 50%;
    box-shadow: 10px 10px 3px rgba(var(--blue-black), 0.5);
}

